tests/baselines/reference/truthinessCallExpressionCoercion4.errors.txt
tests/cases/compiler/truthinessCallExpressionCoercion4.ts(3,5): error TS2774: This condition will always return true since this function is always defined. Did you mean to call it instead?


==== tests/cases/compiler/truthinessCallExpressionCoercion4.ts (1 errors) ====
    const or = x => y => x || y;
    
    if (or(true)) { // error
        ~~~~~~~~
!!! error TS2774: This condition will always return true since this function is always defined. Did you mean to call it instead?
      
    }
    